test/tests/compiler/18_structures/valid/preprocess_with_m4/plx1_m4_define.plx
m4_define(`CONST_ZERO', 0)m4_dnl
m4_define(`RETURN_VAL', `return $1')m4_dnl

pub fn main(none) i32 {
    RETURN_VAL(CONST_ZERO)
}
