test/tests/compiler/18_structures/invalid_parse/extra_credit/default_kw_member_name.plx
// because 'default' is a keyword, we can't use it as a member name
type struc s (otherwise: i32)

pub fn main(none) i32 {
    return 0
}
